# MagicCraftBevy

./: .gitattributes  .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  FSM_PLAN.md  GDD_Affixes.md  MagicCraft_GDD.md  SRP_REVIEW.md  artifacts_review.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/plans/: fsm-implementation.md
assets/: abilities.ron  balance.ron  balance.xlsx  mobs.ron  palette.ron  player.player.ron  player.ron  runes.ron  waves.ron
assets/abilities/: archer.ability.ron  archer_shot.ability.ron  caustic_arrow.ability.ron  dash.ability.ron  fireball.ability.ron  fireball.ron  flamethrower.ability.ron  galvanic_hammer.ability.ron  melee_attack.ability.ron  meteor.ability.ron  orbiting_orbs.ability.ron  shield.ability.ron  skeleton.ability.ron  (+5 more)
docs/: 2.5d-migration-spec.md  ACTION_TREE_REFACTOR_PLAN.md  ability-modifiers-idea.md  artifacts.md  atlas-gdd.md  auto-roguelite-gdd.md  balance_system_spec.md  calc-spec-review.md  calc-spec.md  file_structure.md  progression-redesign-gdd.md  rune-grid-gdd.md  skill-tree-spec.md  stat-scaling-plan.md
magic_craft_macros/: Cargo.toml
scripts/: build_web.sh  serve_web.sh
src/: arena.rs  balance.rs  bullet.rs  coin.rs  components.rs  composite_scale.rs  coord.rs  coords.rs  dissolve_material.rs  enemy.rs  faction.rs  game_state.rs  health_material.rs  hit_flash.rs  hp_arc.rs  input.rs  main.rs  money.rs  movement.rs  palette.rs  particles.rs  player.rs  run.rs  rune_ball_material.rs  schedule.rs  summoning.rs  transition.rs  validation_tests.rs  wave.rs
web/: index.html
(+530 files in other folders)
