[package]
name = "magic_craft_bevy"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["magic_craft_macros"]

[features]
default = []
headless = []

[dependencies]
anyhow = "1.0"
bevy = { version = "0.18", features = ["debug"] }
avian2d = "0.5"
rand = "0.9"
ron = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
bevy-inspector-egui = "0.36"
paste = "1.0"
magic_craft_macros = { path = "magic_craft_macros" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
