[package]
name = "magic_craft_bevy"
version = "0.1.0"
edition = "2021"


[features]
default = []
dev = []

[dependencies]
anyhow = "1.0"
bevy = { version = "0.18", features = ["debug"] }
avian3d = "0.5"
rand = "0.9"
ron = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
bevy_tweening = "0.15"
delaunator = "0.2"
smallvec = "1.15.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
